  use-case is to enable a feature only for users created after a certain date.
* $wgGrantRiskGroups: Grant risk levels, used to indicate on various UIs which
  grants should be considered risky. (T290790)
* …

==== Changed configuration ====
* $wgAutoCreateTempUser: 'matchPattern' now supports multiple match patterns.
* $wgLogActionsHandlers is now ObjectFactory compatible.
* …

==== Removed configuration ====
* $wgDisableCookieCheck has been removed.
* $wgStatsCacheType has been removed. Set $wgMicroStashType instead.
* $wgJobSerialCommitThreshold has been removed without deprecation,
  it wasn't used anywhere according to codesearch and any setups using this
  config will perform just fine but might be less performant.
* $wgLogoHD, deprecated since 1.35, has been removed. Use $wgLogo instead.
* $wgContentHandlerTextFallback, deprecated since 1.37, has been removed.
  No longer customizable.
* $wgSquidPurgeUseHostHeader, deprecated since 1.33, has been removed.
  No longer customizable and always true.
* $wgAllowImageTag, deprecated since 1.35, has been removed.
  Register an extension tag named <img> instead.
* …

=== New user-facing features in 1.42 ===
* …

=== New features for sysadmins in 1.42 ===
* …

=== New developer features in 1.42 ===
* (T326466) MediaWikiIntegrationTestCase's database and set-up code now avoids
  using dynamic properties, which was causing deprecation warnings in PHP 8.2.
* (T13555) MediaWiki now includes styles that allow more accessible markup for
  section headings. MediaWiki's own HTML output will be changed in the future.
  More information: https://www.mediawiki.org/wiki/Heading_HTML_changes
* (T193472) PHP Notice and Warning errors that are silenced (e.g. by the "@"
  operator, error_reporting directive, or Wikimedia\AtEase) are now logged to
  a new "silenced-error" channel.
* (T347347) The CLI installer accepts a "--with-developmentsettings" argument
  to require the DevelopmentSettings.php file at install time.