@@ -5680,6 +5680,7 @@ config-schema:
         description: |-
             Cluster for the bot_passwords table
             @since 1.27
+            @deprecated since 1.42 Use $wgVirtualDomainsMapping instead.
     BotPasswordsDatabase:
         default: false
         type:
@@ -5690,6 +5691,7 @@ config-schema:
             To use a database with a table prefix, set this variable to
             "{$database}-{$prefix}".
             @since 1.27
+            @deprecated since 1.42 Use $wgVirtualDomainsMapping instead.
     SecretKey:
         default: false
         description: 'This should always be customised in LocalSettings.php'
