@@ -33,8 +33,9 @@ use MWRestrictions;
 use Password;
 use PasswordFactory;
 use StatusValue;
+use Wikimedia\Rdbms\IConnectionProvider;
 use Wikimedia\Rdbms\IDatabase;
-use Wikimedia\Rdbms\LBFactory;
+use Wikimedia\Rdbms\IReadableDatabase;
 
 /**
  * @author DannyS712
@@ -47,51 +48,44 @@ class BotPasswordStore implements IDBAccessObject {
 	 */
 	public const CONSTRUCTOR_OPTIONS = [
 		MainConfigNames::EnableBotPasswords,
-		MainConfigNames::BotPasswordsCluster,
-		MainConfigNames::BotPasswordsDatabase,
 	];
 
 	private ServiceOptions $options;
-	private LBFactory $lbFactory;
+	private IConnectionProvider $dbProvider;
 	private CentralIdLookup $centralIdLookup;
 
 	/**
 	 * @param ServiceOptions $options
 	 * @param CentralIdLookup $centralIdLookup
-	 * @param LBFactory $lbFactory
+	 * @param IConnectionProvider $dbProvider
 	 */
 	public function __construct(
 		ServiceOptions $options,
 		CentralIdLookup $centralIdLookup,
-		LBFactory $lbFactory
+		IConnectionProvider $dbProvider
 	) {
 		$options->assertRequiredOptions( self::CONSTRUCTOR_OPTIONS );
 		$this->options = $options;
 		$this->centralIdLookup = $centralIdLookup;
-		$this->lbFactory = $lbFactory;
+		$this->dbProvider = $dbProvider;
 	}
 
 	/**
 	 * Get a database connection for the bot passwords database
-	 * @param int $db Index of the connection to get, e.g. DB_PRIMARY or DB_REPLICA.
+	 * @return IReadableDatabase
+	 * @internal
+	 */
+	public function getReplicaDatabase(): IReadableDatabase {
+		return $this->dbProvider->getReplicaDatabase( 'virtual-botpasswords' );
+	}
+
+	/**
+	 * Get a database connection for the bot passwords database
 	 * @return IDatabase
 	 * @internal
 	 */
-	public function getDatabase( int $db ): IDatabase {
-		if ( $this->options->get( MainConfigNames::BotPasswordsCluster ) ) {
-			$loadBalancer = $this->lbFactory->getExternalLB(
-				$this->options->get( MainConfigNames::BotPasswordsCluster )
-			);
-		} else {
-			$loadBalancer = $this->lbFactory->getMainLB(
-				$this->options->get( MainConfigNames::BotPasswordsDatabase )
-			);
-		}
-		return $loadBalancer->getConnectionRef(
-			$db,
-			[],
-			$this->options->get( MainConfigNames::BotPasswordsDatabase )
-		);
+	public function getPrimaryDatabase(): IDatabase {
+		return $this->dbProvider->getPrimaryDatabase( 'virtual-botpasswords' );
 	}
 
 	/**
@@ -135,7 +129,11 @@ class BotPasswordStore implements IDBAccessObject {
 		}
 
 		[ $index, ] = DBAccessObjectUtils::getDBOptions( $flags );
-		$db = $this->getDatabase( $index );
+		if ( $index == DB_PRIMARY ) {
+			$db = $this->dbProvider->getPrimaryDatabase( 'virtual-botpasswords' );
+		} else {
+			$db = $this->dbProvider->getReplicaDatabase( 'virtual-botpasswords' );
+		}
 		$row = $db->newSelectQueryBuilder()
 			->select( [ 'bp_user', 'bp_app_id', 'bp_token', 'bp_restrictions', 'bp_grants' ] )
 			->from( 'bot_passwords' )
@@ -230,7 +228,7 @@ class BotPasswordStore implements IDBAccessObject {
 			$password = PasswordFactory::newInvalidPassword();
 		}
 
-		$dbw = $this->getDatabase( DB_PRIMARY );
+		$dbw = $this->getPrimaryDatabase();
 		$dbw->newInsertQueryBuilder()
 			->insertInto( 'bot_passwords' )
 			->ignore()
@@ -287,7 +285,7 @@ class BotPasswordStore implements IDBAccessObject {
 			$fields['bp_password'] = $password->toString();
 		}
 
-		$dbw = $this->getDatabase( DB_PRIMARY );
+		$dbw = $this->getPrimaryDatabase();
 		$dbw->newUpdateQueryBuilder()
 			->update( 'bot_passwords' )
 			->set( $fields )
@@ -336,7 +334,7 @@ class BotPasswordStore implements IDBAccessObject {
 	 * @return bool
 	 */
 	public function deleteBotPassword( BotPassword $botPassword ): bool {
-		$dbw = $this->getDatabase( DB_PRIMARY );
+		$dbw = $this->getPrimaryDatabase();
 		$dbw->newDeleteQueryBuilder()
 			->deleteFrom( 'bot_passwords' )
 			->where( [ 'bp_user' => $botPassword->getUserCentralId() ] )
@@ -365,7 +363,7 @@ class BotPasswordStore implements IDBAccessObject {
 			return false;
 		}
 
-		$dbw = $this->getDatabase( DB_PRIMARY );
+		$dbw = $this->getPrimaryDatabase();
 		$dbw->newUpdateQueryBuilder()
 			->update( 'bot_passwords' )
 			->set( [ 'bp_password' => PasswordFactory::newInvalidPassword()->toString() ] )
@@ -393,7 +391,7 @@ class BotPasswordStore implements IDBAccessObject {
 			return false;
 		}
 
-		$dbw = $this->getDatabase( DB_PRIMARY );
+		$dbw = $this->getPrimaryDatabase();
 		$dbw->newDeleteQueryBuilder()
 			->deleteFrom( 'bot_passwords' )
 			->where( [ 'bp_user' => $centralId ] )
